# WebGallery

./: .dockerignore  .gitignore  Dockerfile  README.md  babel.config.json  docker-buildandpush.sh  generate.py  site.webmanifest
content-managment/: Cargo.toml
content-managment-datamodel/src/: datamodel.rs  lib.rs
content-managment/api/: Cargo.toml
content-managment/api/src/: fetch.rs  main.rs  store.rs  util.rs
content-managment/datamodel/: Cargo.toml
content-managment/datamodel/src/: api.rs  datamodel.rs  lib.rs  print.rs
content-managment/main/: Cargo.toml
content-managment/main/src/: cleanup.rs  clone.rs  config.rs  main.rs
content-managment/main/src/datamodel/: dependency.rs  mod.rs  resource_file_manager.rs
content-managment/main/src/datamodel/data/: image.rs  mod.rs  sitedata.rs
content-managment/main/src/dropbox/: mod.rs
content-managment/main/src/generate/: categories.rs  print.rs  templates.rs  thumbnails.rs
content-managment/src/: cleanup.rs  config.rs  main.rs
content-managment/src/datamodel/: dependency.rs  mod.rs  resource_file_manager.rs
content-managment/src/datamodel/data/: image.rs  mod.rs  sitedata.rs
content-managment/src/dropbox/: api.rs  diff.rs  mod.rs
content-managment/src/generate/: categories.rs  mod.rs  print.rs  templates.rs  thumbnails.rs
content-managment/urlencode/: Cargo.toml
content-managment/urlencode/src/: error.rs  lib.rs
css/: about.css  main.css  viewer.css
docker/: 10-fetch-images.sh  nginx.conf
hooks/: build
js/: main.js  view.js
kubernetes/: deployment.yaml  master-service.yaml
old_stuff/: categories.py  dropbox.py
store/: Dockerfile
store/backend/: gallery.py  main.py  (+1 more)
templates/: about.template  index.template  sitemap.template  viewer.template
website/: categories.py  clone.py  dropbox.py  generate.py  robots.txt  site.webmanifest  store.py  util.py
(+60 files in other folders)
