[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.9"
serde_json = "1.0"
chrono = { version = "0.4.22", features = ["serde"] }
reqwest = { version= "0.11", features = ["json", "gzip"] }
content-managment-datamodel = { path = "../datamodel", version = "2.0.0" }
actix-web = "4"
env_logger = "0.8"
log = "0.4"
lazy_static = "1.4.0"
serde_urlencode = "0"